# LLM_Model

./: .editorconfig  .env.example  .gitignore  AGENTS.md  README.md  compose.yaml
.serena/: project.yml
back/: README.md  pyproject.toml
back/scripts/: generate_qwen.py  serve_qwen.py  train_qwen_qlora.py
back/src/mini_llm/: __init__.py  api.py  cli.py  config.py  conversation.py  conversation_prepare.py  conversation_prepare_cli.py  corpus.py  corpus_cli.py  corpus_prepare.py  data_cli.py  dataset.py  evaluation.py  evaluation_cli.py  inference.py  inference_cli.py  model.py  project_code_cli.py  project_code_import.py  qa_cli.py  qa_prepare.py  qlora_config.py  qwen_data.py  qwen_data_cli.py  tokenizer.py  tokenizer_cli.py  training.py  training_cli.py  wikipedia_cli.py  wikipedia_import.py
back/tests/: test_api.py  test_config.py  test_conversation.py  test_conversation_prepare.py  test_corpus_prepare.py  test_dataset.py  test_evaluation.py  test_inference.py  test_model.py  test_project_code_import.py  test_qa_prepare.py  test_qlora_config.py  test_qwen_data.py  test_tokenizer.py  test_training.py  test_wikipedia_import.py
configs/data/: chat_demo.yaml  conversation_intents_v1.yaml  corpus_chat_demo.yaml  corpus_knowledge_v1.yaml  corpus_sft_v1.yaml  corpus_v1.yaml  project_code_v1.yaml  tiny.yaml  v1.yaml  wikipedia_ja_v1.yaml
configs/evaluation/: tiny.yaml
configs/model/: chat_demo.yaml  general_chat.yaml  tiny.yaml  v1.yaml
configs/tokenizer/: chat_demo.yaml  general_chat.yaml  tiny.yaml  v1.yaml
configs/training/: chat_demo.yaml  general_pretrain.yaml  general_sft.yaml  qwen3_1_7b_qlora.yaml  tiny.yaml
data/: README.md
data/samples/: README.md  chat_demo_corpus.jsonl  conversation_corpus.jsonl  evaluation_prompts.jsonl  tokenizer_corpus.jsonl
docker/: Dockerfile
front/: .oxlintrc.json  README.md  index.html  package-lock.json  package.json  tsconfig.app.json
front/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx
front/src/components/: AppSidebar.tsx
front/src/features/chat/: ChatPage.tsx
front/src/features/overview/: OverviewPage.tsx
front/src/services/: generationApi.ts
