[build-system]
requires = ["setuptools==81.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "learning-mini-llm"
version = "0.1.0"
description = "A small decoder-only language model for learning"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.139.0",
  "numpy==2.5.0",
  "PyYAML==6.0.3",
  "tokenizers==0.23.1",
  "uvicorn==0.50.0",
]

[project.optional-dependencies]
cpu = [
  "torch==2.12.1",
]
gpu = [
  "torch==2.12.1",
]

[dependency-groups]
dev = [
  "httpx2==2.5.0",
  "mypy==1.20.2",
  "pytest==8.4.2",
  "ruff==0.15.20",
  "types-PyYAML==6.0.12.20260518",
]

[project.scripts]
mini-llm-data = "mini_llm.data_cli:main"
mini-llm-evaluate = "mini_llm.evaluation_cli:main"
mini-llm-generate = "mini_llm.inference_cli:main"
mini-llm-info = "mini_llm.cli:main"
mini-llm-tokenizer = "mini_llm.tokenizer_cli:main"
mini-llm-train = "mini_llm.training_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu130", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
